# zealty_scrapper

./: .gitignore  README.md  cookie_checker.py  login.py  main_script.py  pyproject.toml  requirements.txt  response.csv  response.json  scrape_functions.py  scraper.py  scraping.ipynb
core/: config.py
modules/: check_temp.py  cookie_checker.py  dummy_email.py  login.py  scrap_all_detail_table.py  scrape_home_page_html.py  scrape_property_assesment.py  scraper_home_page_api.py
olds/: main_script.py
olds/modules/: cookie_checker.py  df_insert_newdata.py  login.py  scrape_home_page_api.py  scrape_home_page_html.py  scrape_market_overview.py  scrape_nearby_school.py  scrape_permits_table.py  scrape_sold_history_table.py
olds/temp/: search.js
src/: cleandata.py  cli.py  config.py
src/libs/: async_iterator.py  check_temp_dir.py  cookie_checker.py  export_result.py  get_mls_detail.py  img_downloader.py  load_result.py  login.py  runcmd.py
src/workers/: background.py  detail.py  search.py
temp/: df_home_page_api.csv  home_page_api.csv  home_page_html.csv
