[tool.poetry]
name = "zealty_scraper"
version = "0.1.0"
description = "Zealty.ca scraper"
authors = ["Bono <bono>"]

[tool.poetry.dependencies]
python = "^3.9"
aiocsv = "1.2.2"
aiofiles = "22.1.0"
aiohttp = "3.8.3"
aiosignal = "1.2.0"
appdirs = "1.4.4"
async-timeout = "4.0.2"
attrs = "22.1.0"
autopep8 = "1.7.0"
beautifulsoup4 = "4.11.1"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
cssselect = "1.1.0"
et-xmlfile = "1.1.0"
fake-useragent = "0.1.11"
frozenlist = "1.3.1"
greenlet = "1.1.3"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "5.0.0"
lxml = "4.9.1"
multidict = "6.0.2"
numpy = "1.23.4"
openpyxl = "3.0.10"
pandas = "1.5.0"
parse = "1.19.0"
playwright = "1.27.1"
pycodestyle = "2.9.1"
pyee = "8.1.0"
pyppeteer = "1.0.2"
pyquery = "1.4.3"
python-dateutil = "2.8.2"
pytz = "2022.4"
six = "1.16.0"
soupsieve = "2.3.2.post1"
toml = "0.10.2"
tqdm = "4.64.1"
typer = "0.6.1"
urllib3 = "1.26.12"
w3lib = "2.0.1"
webencodings = "0.5.1"
websockets = "10.3"
yarl = "1.8.1"
zipp = "3.9.0"
pydantic = "^1.10.2"
requests = "^2.28.1"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
